
[float]
===== Bug fixes
* Fix `HttpUrlConnection` instrumentation issue (affecting distributed tracing as well) when using HTTPS without using
  `java.net.HttpURLConnection#disconnect` - {pull}1447[1447]
* Fixes class loading issue that can occur when deploying multiple applications to the same application server - {pull}1458[#1458]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.18.1]]
==== 1.18.1 - 2020/10/06

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1362[1362] {pull}1366[1366] {pull}1363[1363] {pull}1383[1383] {pull}1368[1368] {pull}1364[1364] {pull}1365[1365] {pull}1367[1367] {pull}1371[1371]

[float]
===== Bug fixes
* Fix instrumentation error for HttpClient - {pull}1402[#1402]
* Eliminate `unsupported class version error` messages related to loading the Java 11 HttpClient plugin in pre-Java-11 JVMs {pull}1397[1397]
* Fix rejected metric events by APM Server with response code 400 due to data validation error - sanitizing Micrometer
metricset tag keys - {pull}1413[1413]
* Fix invalid micrometer metrics with non-numeric values {pull}1419[1419]
* Fix `NoClassDefFoundError` with JDBC instrumentation plugin {pull}1409[1409]
* Apply `disable_metrics` config to Micrometer metrics - {pull}1421[1421]
* Remove cgroup `inactive_file.bytes` metric according to spec {pull}1422[1422]

[[release-notes-1.18.0]]
==== 1.18.0 - 2020/09/08

[float]
===== Features
* Deprecating `ignore_urls` config in favour of <<config-transaction-ignore-urls, `transaction_ignore_urls`>> to align
  with other agents, while still allowing the old config name for backward compatibility - {pull}1315[#1315]
* Enabling instrumentation of classes compiled with Java 1.4. This is reverting the restriction of instrumenting only
  bytecode of Java 1.5 or higher ({pull}320[#320]), which was added due to potential `VerifyError`. Such errors should be
  avoided now by the usage of `TypeConstantAdjustment` - {pull}1317[#1317]