@@ -61,9 +61,10 @@ public class CoreConfiguration extends ConfigurationOptionProvider {
     public static final String CORE_CATEGORY = "Core";
     private static final String DEFAULT_CONFIG_FILE = AGENT_HOME_PLACEHOLDER + "/elasticapm.properties";
     public static final String CONFIG_FILE = "config_file";
+    public static final String ENABLED_KEY = "enabled";
 
     private final ConfigurationOption<Boolean> enabled = ConfigurationOption.booleanOption()
-        .key("enabled")
+        .key(ENABLED_KEY)
         .configurationCategory(CORE_CATEGORY)
         .description("Setting to false will completely disable the agent, including instrumentation and remote config polling.\n" +
             "If you want to dynamically change the status of the agent, use <<config-recording,`recording`>> instead.")
