@@ -44,6 +44,7 @@ endif::[]
 * Fix `HttpUrlConnection` instrumentation issue (affecting distributed tracing as well) when using HTTPS without using
   `java.net.HttpURLConnection#disconnect` - {pull}1447[1447]
 * Fixes class loading issue that can occur when deploying multiple applications to the same application server - {pull}1458[#1458]
+* Fix ability to disable agent on startup wasn't working for runtime attach {pull}1444[1447]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
